--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,12 @@
 services:
     laravel.test:
         build:
-            context: './vendor/laravel/sail/runtimes/8.4'
+            context: ./vendor/laravel/sail/runtimes/8.4
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
                 MYSQL_CLIENT: mariadb-client
-        image: 'sail-8.4/app'
+        image: sail-8.4/app
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
@@ -24,7 +24,8 @@ services:
             - sail
         depends_on:
             - mariadb
-            - valkey
+            - valkey # <-- ใช้ Valkey
+            - mailpit
     mariadb:
         image: 'mariadb:11'
         ports:
@@ -42,11 +43,7 @@ services:
         networks:
             - sail
         healthcheck:
-            test:
-                - CMD
-                - healthcheck.sh
-                - '--connect'
-                - '--innodb_initialized'
+            test: ['CMD', 'healthcheck.sh', '--connect', '--innodb_initialized']
             retries: 3
             timeout: 5s
     valkey:
@@ -58,12 +55,16 @@ services:
         networks:
             - sail
         healthcheck:
-            test:
-                - CMD
-                - valkey-cli
-                - ping
+            test: ['CMD', 'valkey-cli', 'ping']
             retries: 3
             timeout: 5s
+    mailpit:
+        image: 'axllent/mailpit:latest'
+        ports:
+            - '${FORWARD_MAILPIT_PORT:-1025}:1025'
+            - '${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025'
+        networks:
+            - sail
 networks:
     sail:
         driver: bridge
