--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "chart.js": "^4.5.0",
-        "swiper": "^12.0.2"
+        "swiper": "^12.0.2",
+        "vue": "^3.5.22"
     }
 }
