--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-vue": "^6.0.1",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.21",
         "axios": "^1.11.0",
@@ -21,6 +22,8 @@
     "dependencies": {
         "chart.js": "^4.5.0",
         "swiper": "^12.0.2",
-        "vue": "^3.5.22"
+        "vue": "^3.5.22",
+        "vue-wordcloud": "^1.1.1",
+        "wordcloud": "^1.2.3"
     }
 }
