--- a/compose.yaml
+++ b/compose.yaml
@@ -1,75 +1,95 @@
+version: '3.8'
+
 services:
-    laravel.test:
+    # Service สำหรับ PHP Application
+    app:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.4
+            context: ./docker/php
             dockerfile: Dockerfile
             args:
-                WWWGROUP: '${WWWGROUP}'
-                MYSQL_CLIENT: mariadb-client
-        image: sail-8.4/app
-        extra_hosts:
-            - 'host.docker.internal:host-gateway'
-        ports:
-            - '${APP_PORT:-80}:80'
-            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
-        environment:
-            WWWUSER: '${WWWUSER}'
-            LARAVEL_SAIL: 1
-            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
-            XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
-            IGNITION_LOCAL_SITES_PATH: '${PWD}'
+                user: sail
+                uid: 1000
+        container_name: tms_app
+        restart: unless-stopped
+        working_dir: /var/www/html
         volumes:
-            - '.:/var/www/html'
-        networks:
-            - sail
+            - .:/var/www/html
         depends_on:
-            - mariadb
-            - valkey # <-- ใช้ Valkey
-            - mailpit
-    mariadb:
-        image: 'mariadb:11'
+            - db
+            - redis
+        networks:
+            - tms_network
+
+    # Service สำหรับ Web Server (Nginx)
+    nginx:
+        image: nginx:alpine
+        container_name: tms_nginx
+        restart: unless-stopped
         ports:
-            - '${FORWARD_DB_PORT:-3306}:3306'
+            - "${APP_PORT:-8080}:80"
+        volumes:
+            - .:/var/www/html
+            - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf # <-- แก้ไข: Mount ไฟล์ ไม่ใช่โฟลเดอร์
+        depends_on:
+            - app
+        networks:
+            - tms_network
+
+    # *** ส่วนที่แก้ไข: เปลี่ยนเป็น PostgreSQL ***
+    db:
+        image: postgres:15-alpine
+        container_name: tms_db
+        restart: unless-stopped
+        ports:
+            - "${FORWARD_DB_PORT:-5432}:5432" # <-- Port ของ Postgres
         environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ROOT_HOST: '%'
-            MYSQL_DATABASE: '${DB_DATABASE}'
-            MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+            POSTGRES_DB: '${DB_DATABASE}'
+            POSTGRES_USER: '${DB_USERNAME}'
+            POSTGRES_PASSWORD: '${DB_PASSWORD}'
         volumes:
-            - 'sail-mariadb:/var/lib/mysql'
-            - './vendor/laravel/sail/database/mariadb/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+            - tms_pg_data:/var/lib/postgresql/data # <-- Volume ของ Postgres
         networks:
-            - sail
+            - tms_network
         healthcheck:
-            test: ['CMD', 'healthcheck.sh', '--connect', '--innodb_initialized']
-            retries: 3
+            test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME} -d ${DB_DATABASE}"]
+            interval: 10s
             timeout: 5s
-    valkey:
-        image: 'valkey/valkey:alpine'
+            retries: 5
+    # *** สิ้นสุดส่วนที่แก้ไข ***
+
+    # Service สำหรับ Cache & Queue (Redis)
+    redis:
+        image: redis:alpine
+        container_name: tms_redis
+        restart: unless-stopped
         ports:
-            - '${FORWARD_VALKEY_PORT:-6379}:6379'
+            - "${FORWARD_REDIS_PORT:-6379}:6379"
         volumes:
-            - 'sail-valkey:/data'
+            - tms_redis_data:/data
         networks:
-            - sail
+            - tms_network
         healthcheck:
-            test: ['CMD', 'valkey-cli', 'ping']
+            test: ["CMD", "redis-cli", "ping"]
             retries: 3
             timeout: 5s
+            
+    # Service สำหรับ Email Catcher (Mailpit)
     mailpit:
         image: 'axllent/mailpit:latest'
+        container_name: tms_mailpit
+        restart: unless-stopped
         ports:
             - '${FORWARD_MAILPIT_PORT:-1025}:1025'
             - '${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025'
         networks:
-            - sail
+            - tms_network
+
 networks:
-    sail:
+    tms_network:
         driver: bridge
+
 volumes:
-    sail-mariadb:
+    tms_pg_data: # <-- เปลี่ยนชื่อ Volume
         driver: local
-    sail-valkey:
+    tms_redis_data:
         driver: local
